# workato-sdk-docs

./: .codecov.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  install.sh  pyproject.toml  run.sh  test-auto-commit-final.sh  test-auto-commit.sh  test_demo.py  test_full_conversion.py  test_implementation.sh  test_regex_fix.py  uninstall.sh
docs/: cli.md  cli__guides__cli__actions.md  cli__guides__cli__download-streaming-actions.md  cli__guides__cli__methods.md  cli__guides__cli__multistep-actions.md  cli__guides__cli__pick_lists.md  cli__guides__cli__test.md  cli__guides__cli__triggers.md  cli__guides__cli__upload-streaming-actions.md  cli__guides__getting-started.md  cli__guides__rspec__connector_spec.md  cli__guides__rspec__enable-ci-cd-on-github.md  cli__guides__rspec__file_streaming.md  cli__guides__rspec__vcr.md  cli__guides__rspec__writing_tests.md  cli__guides__security-guidelines.md  cli__guides__troubleshooting.md  cli__reference__cli-commands.md  cli__reference__cli-project-directory-reference.md  cli__reference__rspec-commands.md  docs_manifest.json  guides.md  guides__advanced-connector-guide__connector-building-building-actions.md  guides__advanced-connector-guide__connector-building-building-triggers.md  guides__advanced-connector-guide__connector-building-code-patterns.md  guides__advanced-connector-guide__connector-building-defining-schema.md  guides__advanced-connector-guide__connector-planning.md  guides__advanced-connector-guide__introduction.md  guides__authentication.md  guides__authentication__api-key.md  guides__authentication__aws_auth.md  guides__authentication__basic-authentication.md  (+59 more)
tests/: README.md  (+9 more)
(+11 files in other folders)
