[project]
name = "workato-sdk-docs"
version = "3.1.0"
description = "Local environment for building Workato SDK docs"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31,<3.0",
  "beautifulsoup4>=4.12,<5.0",
  "html2text>=2020.1.16,<2025.0",
]

[project.urls]
Repository = "https://github.com/kreitter/workato-sdk-docs"

[project.scripts]
workato-sdk-install = "workato_sdk_docs.installer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["workato_sdk_docs"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
