[project]
name = "workato-sdk-docs"
version = "3.1.0"
description = "Local environment for building Workato SDK docs"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31,<3.0",
  "beautifulsoup4>=4.12,<5.0",
  "html2text>=2020.1.16,<2025.0",
]

[project.urls]
Repository = "https://github.com/kreitter/workato-sdk-docs"

[project.scripts]
workato-sdk-install = "workato_sdk_docs.installer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["workato_sdk_docs"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.1.0",
    "responses>=0.23.0",
    "requests-mock>=1.11.0",
    "freezegun>=1.2.0",
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
